--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,89 @@
-.page {
+.container {
+  height: 100vh;
+  background-color: rgb(224, 110, 110);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .page {
   --background: #fafafa;
   --foreground: #fff;
 
@@ -91,10 +176,10 @@ a.primary {
 
 a.secondary {
   border-color: var(--button-secondary-border);
-}
+} */
 
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
     background: var(--button-primary-hover);
     border-color: transparent;
@@ -104,9 +189,9 @@ a.secondary {
     background: var(--button-secondary-hover);
     border-color: transparent;
   }
-}
+} */
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .main {
     padding: 48px 24px;
   }
@@ -138,4 +223,4 @@ a.secondary {
     --button-secondary-hover: #1a1a1a;
     --button-secondary-border: #1a1a1a;
   }
-}
+} */
