--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,6 +3,24 @@
   background-color: rgb(224, 110, 110);
 }
 
+.main {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+}
+
+.itemWrapper {
+  width: 250px;
+  height: 350px;
+  border-radius: 10px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding: 12px 16px;
+}
+
 
 
 
