--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,18 @@
 .container {
   height: 100vh;
-  background-color: rgb(224, 110, 110);
+  /* background-color: rgb(224, 110, 110); */
+  margin-top: 8vw;
 }
 
 .main {
   background-color: white;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0px 24px;
+  padding-bottom: 200px;
+  
 }
 
 .itemWrapper {
@@ -21,81 +27,19 @@
   padding: 12px 16px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.title{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.desc {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
 
 
 
