--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,5 +1,15 @@
 .navbar {
     height: 5vh;
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    /* color: white; */
+    display: flex;
+    gap: 16;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100vw;
+}
+
+.activeTab {
+    border-bottom: 1px solid black;
 }
